# chesscpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
docs/: layout.md
src/: check.cpp  main.cpp  move.h
src/board/: board.cpp
src/boards/: attacks.cpp  attacks.h  bitboards.h  board.cpp  board.h  board_ops.cpp  board_ops.h  make_move.cpp  masks.cpp  masks.h  movegen.cpp  position.cpp  position.h  squares.h
src/pieces/: bishop.cpp  index.h  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
src/renderer/: board.h  controller.cpp  controller.h  geometry.cpp  geometry.h  gui.cpp  gui.h  model.cpp  model.h  textures.cpp  textures.h  view.cpp  view.h
src/utils/: utils.cpp  utils.h
tests/: generators.cpp  runner.cpp  test.pawn.cpp  tests.h
